--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 :root{
   --primary-white:#fff;
   --primary-orange:#f9ab00;
-  --primary-dark:rgba(255,255,255,0)
+  --primary-dark:rgba(255,255,255,0);
+  --primary-red:#ef4035;
+  --primary-hover-red:#f33501;
 }
 
 
@@ -20,6 +22,7 @@ nav a.nav-link{
   font-size: 15px;
   letter-spacing: 0.0375rem;
   cursor: pointer;
+  margin: 2rem;
 }
 
 nav ul li{
@@ -39,6 +42,13 @@ nav ul li{
   height: 6rem;
 }
 
+@media (max-width:768px) {
+  .navbar-brand{
+    width: 7rem;
+  }
+  
+}
+
 .navbar-nav>li>a.active, .navbar-nav >li >a.active:focus{
   border-top:0.1875rem solid var(--primary-orange)
 }
@@ -48,3 +58,77 @@ nav ul li{
   border-top:0.1875rem solid var(--primary-orange)
 }
 
+.header-wraper{
+  position: relative;
+  background: url(laptopFive.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  height: 90vh;
+}
+
+.main-info{
+  display: flex;
+  position:absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 1;
+}
+
+.main-info h1{
+  color:var(--primary-orange);
+  text-transform: uppercase;
+}
+
+@media (max-width:768px) {
+  .main-info h1{
+    font-size: 1.7rem !important;
+  }
+  .typed-text{
+    font-size:1.3rem !important;
+  }
+  
+}
+
+nav{
+  z-index: 2;
+}
+.typed-text{
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+.btn-main-offer{
+  border:1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+ padding: 8px;
+  color: var(--primary-white); 
+  margin: 2rem;
+}
+
+.btn-main-offer:hover{
+  text-decoration: none;
+  background-color: var(--primary-hover-red);
+  color: var(--primary-white);
+  transition: .2s ease-in-out;
+}
+
+.tsparticles-canvas-el{
+  position:absolute;
+  height: 100vh;
+  width: 100vh;
+  z-index: 1;
+}
+@media (max-width:768px) {
+  .particles-canvas{
+    display: none;
+  }
+  
+}
